--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ analytics:
 # Site Author
 author:
   name             : "Mr. Muyu Zhang"
-  avatar           : "/assets/img/muyu.svg"
+  avatar           : "/assets/img/muyu2.jpg"
   bio              : |
     Master Student in Theoretical and Applied Mechanics,  
     Department of Mechanics and Aerospace Engineering,  
