--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ author:
   employer         : "SUSTech" #如果要添加谷歌学术在这里另起一行加，以及uri
   email            : "12332533@mail.sustech.edu.cn"
   github           : "muyu-zhang-0523"
-  linkedin         : "Muyu Zhang"
-  orcid            : "0009-0003-8837-3644"
+  #linkedin         : "Muyu Zhang"
+  #orcid            : "0009-0003-8837-3644"
 
 
 
