--- a/_config.yml
+++ b/_config.yml
@@ -66,10 +66,10 @@ social:
 
 
 # Analytics
-analytics:
-  provider               :  "false" # false (default), "google", "google-universal", "custom"
-  google:
-    tracking_id          :
+# analytics:
+  # provider               :  "false" # false (default), "google", "google-universal", "custom"
+  # google:
+   #  tracking_id          :
 
 
 # Site Author
