--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,7 @@ author:
     Passionate about nanoscale mechanics, materials science, and innovative research.  
     Seeking PhD opportunities in related fields.
     
-    (The pageview statistics map at the bottom of this page is fake; please ignore it.
-  )
+    (The pageview statistics map at the bottom of this page is fake; please ignore it.)
   
   location         : "Shenzhen, China"
   employer         : "SUSTech" #如果要添加谷歌学术在这里另起一行加，以及uri
